       non ASCII chars were before an entered URL. (Stefan)
- BUG: the local hook scripts did not work, and the hook settings page
       could crash. (Stefan)
- BUG: When an URL was entered in the repository browser which points to a 
       different repository than the one which is currently shown, the
       project properties were not cleared. (Stefan)

Version 1.5.0-RC3
- NEW: Draw the whitespace chars in gray so they're clearly distinguishable
       from normal chars in TortoiseMerge.
       See issue #418 for details. (Stefan)
- NEW: Delete the respective log cache file if the TSVN instance using it
       would crash for some reason. (Stefan Fuhrmann)
- CHG: If different repositories are accessed through the same URL, TSVN 
       will keep the log cache only for the lastest one (Stefan Fuhrmann)
- BUG: If the cached log history is incomplete, showing log in off-line mode 
       would include (some) revisions that don't belong to the respective 
       path. (Stefan Fuhrmann)
- BUG: When blaming a file with an Unicode BOM, a dot was shown in the first
       line of the blamed text. (Stefan)
- BUG: The commit log history in the commit dialog was not loaded for the
       selected project. (Stefan)
- BUG: When removing a folder from the repository browser left tree view,
       the views were not refreshed properly. (Stefan)
- BUG: Doing an 'rename' from the context menu on the tree view in the
       repository browser edited the selected item, not the one which
       was right-clicked on. (Stefan)
- BUG: SubWCRev returned the wrong URL if -e was specified and
       externals were present. See issue #419 for details. (Stefan)
- BUG: TortoiseMerge showed the line ending symbols over the line numbers
       in some cases. (Stefan)
- BUG: The format of the log message copied to the clipboard from
       the log dialog was missing a closing parenthesis. (Stefan)
- BUG: Incomplete or wrong cached log info could crash TSVN. (Stefan Fuhrmann)